<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:text="@string/about_txt"
                android:textColor="@color/white"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/version_1_2_3"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/timer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/timer_head"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:typeface="serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/_00_00_00_t"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/button_timer"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/selector_button_green"
                    android:text="@string/set_timer_a"
                    android:textColor="@color/tool_bg" />
            </LinearLayout>

            <TextView
                android:id="@+id/stream_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/stream_quality"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:typeface="serif" />

            <LinearLayout
                android:id="@+id/stream_box"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/quality"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:typeface="monospace" />

                <View
                    android:id="@+id/switch_sream"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/blur_radius"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:typeface="serif" />


            <View
                android:id="@+id/range_seekbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp" />

            <Button
                android:id="@+id/button_mail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/selector_button_green"
                android:text="@string/mail_to_developer"
                android:textColor="@color/background" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>